PP-8125 Stripe - Get credentials by payment provider
- Get Stripe credentials based on payment provider name for all operations
- Updated path `/v1/api/accounts/{accountId}/stripe-account` to return stripe_account_id from the credential with payment provider 'Stripe' (only when active/current payment provider is Stripe).