@@ -1,6 +1,5 @@
 package uk.gov.pay.connector.gateway.stripe.request;
 
-import com.google.common.collect.ImmutableMap;
 import org.junit.Before;
 import org.junit.Test;
 import org.junit.runner.RunWith;
@@ -10,14 +9,18 @@ import uk.gov.pay.connector.app.StripeAuthTokens;
 import uk.gov.pay.connector.app.StripeGatewayConfig;
 import uk.gov.pay.connector.charge.dao.ChargeDao;
 import uk.gov.pay.connector.charge.model.domain.Charge;
-import uk.gov.pay.connector.charge.model.domain.ChargeEntity;
 import uk.gov.pay.connector.gateway.model.request.RefundGatewayRequest;
 import uk.gov.pay.connector.gatewayaccount.model.GatewayAccountEntity;
 import uk.gov.pay.connector.refund.model.domain.RefundEntity;
 
+import java.util.Map;
+
 import static org.hamcrest.MatcherAssert.assertThat;
 import static org.hamcrest.Matchers.is;
 import static org.mockito.Mockito.when;
+import static uk.gov.pay.connector.gatewayaccount.model.GatewayAccountEntityFixture.aGatewayAccountEntity;
+import static uk.gov.pay.connector.gatewayaccount.model.GatewayAccountType.LIVE;
+import static uk.gov.pay.connector.gatewayaccount.model.GatewayAccountType.TEST;
 
 @RunWith(MockitoJUnitRunner.class)
 public class StripeRequestTest {
@@ -28,7 +31,7 @@ public class StripeRequestTest {
     RefundEntity refundEntity;
     @Mock
     Charge charge;
-    @Mock
+
     GatewayAccountEntity gatewayAccount;
     @Mock
     StripeGatewayConfig stripeGatewayConfig;
@@ -39,7 +42,10 @@ public class StripeRequestTest {
 
     @Before
     public void setUp() {
-        when(gatewayAccount.getCredentials()).thenReturn(ImmutableMap.of("stripe_account_id", "stripe_connect_account_id"));
+        gatewayAccount = aGatewayAccountEntity()
+                .withGatewayName("stripe")
+                .withCredentials(Map.of("stripe_account_id", "stripe_connect_account_id"))
+                .build();
         when(charge.getGatewayTransactionId()).thenReturn("gatewayTransactionId");
         when(stripeGatewayConfig.getAuthTokens()).thenReturn(stripeAuthTokens);
         when(stripeAuthTokens.getLive()).thenReturn("live");
@@ -52,13 +58,13 @@ public class StripeRequestTest {
 
     @Test
     public void shouldSetCorrectAuthorizationHeaderForLiveAccount() {
-        when(gatewayAccount.isLive()).thenReturn(true);
+        gatewayAccount.setType(LIVE);
         assertThat(stripeRefundRequest.getHeaders().get("Authorization"), is("Bearer live"));
     }
     
     @Test
     public void shouldSetCorrectAuthorizationHeaderForTestAccount() {
-        when(gatewayAccount.isLive()).thenReturn(false);
+        gatewayAccount.setType(TEST);
         assertThat(stripeRefundRequest.getHeaders().get("Authorization"), is("Bearer test"));
     }
 }
